# Aura

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  test_real_integrations.py
aura/: __init__.py  main.py
aura/agents/: __init__.py  anthropic_agent.py  base.py  jina_agent.py  local_agent.py  manager.py  openai_agent.py
aura/api/: __init__.py  cli.py  server.py
aura/cli/: main.py
aura/config/: __init__.py  settings.py
aura/core/: __init__.py  events.py  planner.py  system.py  transaction.py
aura/execution/: tasks.py
aura/kernel/: ai_planner.py  events.py  transaction.py
aura/memory/: embeddings.py  enhanced_manager.py  graph.py  graph_retrieval.py  hierarchical.py  hierarchy.py  learning.py  lifecycle.py  manager.py  models.py  nodes.py  relationships.py  retrieval.py
aura/utils/: async_utils.py  config.py  errors.py  logging.py  serialization.py
deployment/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  storage.yaml
deployment/scripts/: deploy.sh
docs/: executive_summary.md  memory_system.md  project_assessment.md
examples/: README.md  comprehensive_test.py  demo.py  enhanced_memory_test.py  memory_models_test.py  simple_test.py  writing_assistant_demo.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core_events.py  test_events.py  test_examples.py  test_imports.py  test_learning.py  test_memory.py  test_system.py  test_tasks.py  test_transaction.py
tests/integration/: test_memory_system.py
tests/performance/: test_memory_performance.py
tests/unit/: test_agents.py  test_memory_models.py
