[tool.poetry]
name = "aura"
version = "0.1.0"
description = "AURA - An AI-Native Meta-OS"
authors = ["AURA Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.0.0"
rich = "^13.0.0"
gitpython = "^3.1.0"
asyncio = "^3.4.3"
faiss-cpu = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aura = "aura.cli.main:app"